--- a/Tomato_Disease_Detection.ipynb
+++ b/Tomato_Disease_Detection.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/QuiNhu/Tomato_Disease_Detection/blob/main/Tomato_Disease_Detection.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -5596,7 +5606,9 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMqyYJmpmtYustEmeO8kVww",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
